--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Hello-world</h1>
-        <p>just for test</p>
+        <p>just for test modified by isChosen</p>
 
         <p class="view"><a href="https://github.com/Ermk/Hello-world">View the Project on GitHub <small>Ermk/Hello-world</small></a></p>
 
